# Aluma1_TapeOut

./: .gitignore  2A5E1610  602A9A00  ADF_PhC.py  ADF_PhC_test.ipynb  ADF_RIO.py  AFQH_Device.py  AFQH_Device_SW.py  AFQH_Lattice.py  AFQH_Lattice_SW.py  AL_2D_Device_test.ipynb  AL_Die_Frame.py  AL_GratingCoupler.py  AL_Layers.py  AL_Taper.py  AL_Top_0.py  AL_Top_2_AM.ipynb  AL_Top_3_AM.ipynb  AL_Top_4_AM.py  APF_Modulated.py  APF_Pulley.py  AQH_CB_Device.py  AQH_CB_Device_0.py  AQH_CB_Lattice.py  AQH_CB_Lattice_0.py  AQH_Device.py  AQH_Device_Rot.py  AQH_Lattice.py  AQH_Lattice_Rot.py  Bend.py  Device_Config.xlsx  Device_Config_2D.xlsx  Device_Config_Rings.xlsx  Die1.py  Die1_v2.py  Die2.py  Die2_v2.py  Die3.py  Die3_v2.py  Die4.py  (+38 more)
