[project]
name = "aeluma-1"
version = "0.1.0"
description = "AlGaAs tapeout layout — Aeluma 1"
requires-python = ">=3.10"
dependencies = [
    "gdsfactoryplus",
]

[tool.gdsfactoryplus.pdk]
name = "generic"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
